--- a/Amey/Code.ipynb
+++ b/Amey/Code.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "# reading the dataset\n",
-    "file_path = \"./Epicasting-main/Epicasting-main/Datasets/Dengue_datasets/Bangkok_Dengue.xlsx\"\n",
+    "file_path = \"./Bangkok_Dengue.xlsx\"\n",
     "dataset = pd.read_excel(file_path)\n",
     "\n",
     "print(dataset.head())\n",
